refactor: replace canonical ir with openqasm
